Fix blurry logo by using correct dimensions
- Updated HTML logo dimensions from 50x50 to 50x21 (actual image size)
- Reduced CSS logo width from 110px to 50px for crisp display at 1x scale
- Updated medium breakpoint from 130px to 75px (1.5x scale)
- Kept large breakpoint at 100px (2x scale)
- Fixed blurriness caused by browser upscaling

--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -1,5 +1,5 @@
 #headerWrapper header img {
-    width: 130px;
+    width: 75px;
     padding-top: .5rem;
 }
 
