--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -29,7 +29,7 @@ body {
 
 #headerWrapper header img {
     display: block;
-    width: 110px;
+    width: 50px;
     height: auto;
     padding-top: .5rem;
 }
