--- a/src/styles.css
+++ b/src/styles.css
@@ -341,7 +341,7 @@ body {
 
 #headerWrapper header img {
   display: block;
-  width: 110px;
+  width: 50px;
   height: auto;
   padding-top: 0.5rem;
 }
@@ -506,7 +506,7 @@ body {
 
 @media only screen and (min-width: 39rem) {
   #headerWrapper header img {
-    width: 130px;
+    width: 75px;
     padding-top: 0.5rem;
   }
   header {
